# PointOfSale

./: .gitignore  App.qml  Articles.qml  ArtikelMatrix.qml  BezahlenMatrix.qml  ButtonPanel.qml  CMakeLists.txt  Exit.qml  LabeledTextField.qml  MainStyle.qml  MatrixInput.qml  OverView.qml  PointOfSale.pro  README.md  Relations.qml  ReportAndInput.qml  ReportStore.qml  deploy_osx.sh  main.qml  posprinter.cpp  qml.qrc  temp.cmake.txt
cmake/: BuildType.cmake  DetermineVersion.cmake  InstallLocation.cmake  MacOSXBundleInfo.plist.in
image_source/: prepare.sh
pointofsale/: About.qml  App.qml  Authenticate.qml  BelegeMatrix.qml  CMakeLists.txt  ConditionalLayout.qml  MacOSXBundleInfo.plist.in  MainReport.qml  MainStyle.qml  MatrixInput.qml  OverView.qml  PointOfSale.pro  ReportAndInput.qml  ReportStore.qml  Settings.qml  SimpleListItemDelegate.qml  StackedView.qml  WaregroupMatrix.qml  Waregroups.qml  XMatrix.qml  XMatrixDelegate.qml  app.rc  capturer.cpp  capturer.h  escimage.cpp  escimage.h  logger.cpp  logger.h  main.cpp  main.qml  moc_posprinter.cpp  pointofsale_automoc.cpp  posprinter.cpp  posprinter.h  qml.qrc  qml.qrc.depends  qmldir  version.h
pointofsale/image_source/: logo.afdesign  osx_icon.icns
pointofsale/lastinstall/: CMakeList.txt
pointofsale/qml/: App.qml  ArticleMatrix.qml  ButtonPanel.qml  FullMatrix.qml  RelationMatrix.qml  main.qml
pointofsale/qml/controller/: App.qml  Local.qml  Remote.qml  ReportStore.qml
pointofsale/qml/controlls/: LabeledTextField.qml  MatrixField.qml  ReportView.qml  SimpleListItemDelegate.qml  StackViewItem.qml  StackedView.qml  XButton.qml  XMatrix.qml  XMatrixDelegate.qml
pointofsale/qml/controlls/calendar/: Calendar.qml  DayButton.qml
pointofsale/qml/js/: Shunt.js  SimpleSAX.js  Template.js
pointofsale/qml/singleton/: App.qml  Configurations.qml  ReportStore.qml  qmldir
pointofsale/qml/styles/: MainStyle.qml
pointofsale/qml/views/: About.qml  ArticleMatrix.qml  Authenticate.qml  ButtonPanel.qml  Exit.qml  MainReport.qml  MatrixInput.qml  OverView.qml  ReferenzPlugin.qml  RelationMatrix.qml  ReportAndInput.qml  Settings.qml  Testing.qml  WaregroupMatrix.qml
pointofsale/qml/views/matrix/: ArtikelMatrix.qml  BelegeMatrix.qml  BezahlenMatrix.qml  FullMatrix.qml  Matrix.qml  WarengruppenMatrix.qml
pointofsale/qml/views/plugins/: GutscheinAusgebenPlugin.qml  GutscheinEinloesenPlugin.qml  RabattPlugin.qml  ReferenzPlugin.qml
pointofsale/qml/views/stackitems/: About.qml  CloseCashBox.qml  Exit.qml  Logging.qml  Main.qml  MatrixInput.qml  OverView.qml  ReportList.qml  Screen.qml  Settings.qml  Testing.qml
windows/: open.vbs
